testdata/baselines/reference/submodule/compiler/jsdocClassMissingTypeArguments.errors.txt
/a.js(1,1): error TS8004: Type parameter declarations can only be used in TypeScript files.
/a.js(4,13): error TS2314: Generic type 'C<T>' requires 1 type argument(s).


==== /a.js (2 errors) ====
    /** @template T */
    ~~~~~~~~~~~~~~~~~~
    class C {}
    ~~~~~~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    
    /** @param {C} p */
                ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    function f(p) {}
    